# deepstream-test1-segmentation

./: CMakeLists.txt  README.md  main.c
